[package]
name = "spider-rs-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["json", "cookies"] }
scraper = "0.21"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.5"
thiserror = "2.0"
log = "0.4"
env_logger = "0.11"
clap = { version = "4.5", features = ["derive"] }

[dev-dependencies]
wiremock = "0.6"
